update in 10-25 at home

--- a/csv_test.ipynb
+++ b/csv_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        " u'status': u'canceled'}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        " u'status': u'canceled'}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        " u'utc_date': u'2015-01-09'}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,8 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -133,7 +135,7 @@
        " u'utc_date': datetime.datetime(2015, 1, 9, 0, 0)}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +177,7 @@
        " u'processing_state': u'EVALUATED'}"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,9 +188,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'account_key': u'256',\n",
+       " u'assigned_rating': u'UNGRADED',\n",
+       " u'completion_date': datetime.datetime(2015, 1, 16, 0, 0),\n",
+       " u'creation_date': datetime.datetime(2015, 1, 14, 0, 0),\n",
+       " u'lesson_key': u'3176718735',\n",
+       " u'processing_state': u'EVALUATED'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "for submission in project_submissions:\n",
     "    submission['completion_date'] = parse_date(submission['completion_date'])\n",
@@ -199,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +240,7 @@
        "1640"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +260,7 @@
        "1302"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +281,7 @@
        "136240"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +301,7 @@
        "1237"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +323,7 @@
        "3642"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +343,7 @@
        "743"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +364,7 @@
        "u'1'"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -442,13 +460,13 @@
     "for i_enrolled_student in enrollments :\n",
     "    s = i_enrolled_student['account_key']\n",
     "    if  s not in unique_engagement_students:\n",
-    "        print i_enrolled_student\n",
+    "        #print i_enrolled_student\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -468,8 +486,183 @@
     "    s = enrollment['account_key']\n",
     "    if s not in unique_engagement_students and enrollment['join_date'] != enrollment['cancel_date']:\n",
     "        num_problem_student += 1\n",
-    "        print enrollment\n",
+    "        #print enrollment\n",
     "print num_problem_student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "set([u'1304', u'1069', u'448', u'312', u'818', u'1101'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "udacity_test_account = set()\n",
+    "for record in enrollments:\n",
+    "    if record['is_udacity'] :\n",
+    "        udacity_test_account.add(record['account_key'])\n",
+    "print len(udacity_test_account)\n",
+    "print udacity_test_account\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def non_udacity_acount(data):\n",
+    "    non_udacity_acount = []\n",
+    "    for record in data:\n",
+    "        if record['account_key'] not in udacity_test_account:\n",
+    "            non_udacity_acount.append(record)\n",
+    "    return non_udacity_acount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1622\n",
+      "135656\n",
+      "3634\n"
+     ]
+    }
+   ],
+   "source": [
+    "non_udacity_enrollments = non_udacity_acount(enrollments)\n",
+    "non_udacity_engagement = non_udacity_acount(daily_engagement)\n",
+    "non_udacity_submissions = non_udacity_acount(project_submissions)\n",
+    "\n",
+    "print len(non_udacity_enrollments)\n",
+    "print len(non_udacity_engagement)\n",
+    "print len(non_udacity_submissions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 创建一个字典，字典的内容包括：\n",
+    "#### 没有取消的学生，'days_to_cancel' 为None\n",
+    "#### 学生保持注册的时间超过了7天, 'days_to_cancel'  >  7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{u'lessons_completed': 0, u'num_courses_visited': 1, u'total_minutes_visited': 11.6793745, u'projects_completed': 0, 'account_key': u'0', u'utc_date': datetime.datetime(2015, 1, 9, 0, 0)}\n",
+      "{u'status': u'canceled', u'is_udacity': False, u'is_canceled': True, u'join_date': datetime.datetime(2014, 11, 10, 0, 0), u'account_key': u'700', u'cancel_date': datetime.datetime(2014, 11, 16, 0, 0), u'days_to_cancel': 6}\n",
+      "{u'lesson_key': u'3176718735', u'processing_state': u'EVALUATED', u'account_key': u'256', u'assigned_rating': u'UNGRADED', u'completion_date': datetime.datetime(2015, 1, 16, 0, 0), u'creation_date': datetime.datetime(2015, 1, 14, 0, 0)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "paid_students = {}\n",
+    "print non_udacity_engagement[0]\n",
+    "print non_udacity_enrollments[0]\n",
+    "print non_udacity_submissions[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "995\n"
+     ]
+    }
+   ],
+   "source": [
+    "for record in non_udacity_enrollments:\n",
+    "    if record['days_to_cancel'] == None or record['days_to_cancel'] >7:\n",
+    "        record_account = record['account_key']\n",
+    "        record_enrollment_date = record['join_date']\n",
+    "        if record_account not in paid_students or record_enrollment_date > paid_students[record_account]:\n",
+    "            paid_students[record_account] = record_enrollment_date\n",
+    "        \n",
+    "print len(paid_students)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1293\n",
+      "134549\n",
+      "3618\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "21508"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def remove_free_trail_cancels(data):\n",
+    "    new_data = []\n",
+    "    for data_point in data:\n",
+    "        if data_point['account_key'] in paid_students:\n",
+    "            new_data.append(data_point)\n",
+    "    return new_data\n",
+    "\n",
+    "def within_one_week(join_date, engagement_date):\n",
+    "    time_delta = engagement_date - join_date\n",
+    "    return time_delta.days < 7\n",
+    "\n",
+    "paid_enrollments = remove_free_trail_cancels(non_udacity_enrollments)\n",
+    "paid_engagement = remove_free_trail_cancels(non_udacity_engagement)\n",
+    "paid_submissions = remove_free_trail_cancels(non_udacity_submissions)\n",
+    "\n",
+    "print len(paid_enrollments)\n",
+    "print len(paid_engagement)\n",
+    "print len(paid_submissions)\n",
+    "\n",
+    "paid_engagement_in_first_week = []\n",
+    "\n",
+    "for engagement_record in paid_engagement:\n",
+    "    account_key = engagement_record['account_key']\n",
+    "    join_date = paid_students[account_key]\n",
+    "    engagement_record_date = engagement_record['utc_date']\n",
+    "    if within_one_week(join_date, engagement_record_date):\n",
+    "        paid_engagement_in_first_week.append(engagement_record)\n",
+    "\n",
+    "len(paid_engagement_in_first_week)\n",
+    "    "
    ]
   },
   {
